k3s/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: voteapp
  labels:
    app: vote-application
