k3s/k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: voteapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:alpine
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis          # nome DNS interno: redis.voteapp.svc.cluster.local
  namespace: voteapp
spec:
  type: ClusterIP     # apenas acessível dentro do cluster
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
